<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    android:background="@color/dark_transparent"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_filter"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/transparent"
                android:textAlignment="textStart"
                android:drawablePadding="10dp"
                android:textAllCaps="false"
                android:textSize="8pt"
                android:text="@string/title_category"
                tools:ignore="RelativeOverlap" />


            <ImageButton
                android:id="@+id/category_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <RadioGroup
            android:id="@+id/category_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="8pt"
                android:text="@string/title_all"/>

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="8pt"
                android:text="@string/title_elementary"/>

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="8pt"
                android:text="@string/title_junior"/>

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="8pt"
                android:text="@string/title_senior"/>

            <RadioButton
                android:id="@+id/rb5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="8pt"
                android:text="@string/title_univ"/>

        </RadioGroup>


    </LinearLayout>

</RelativeLayout>
