<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription,RelativeOverlap"
    android:background="@color/dark_transparent"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_sort"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/transparent"
                android:textAlignment="textStart"
                android:drawablePadding="10dp"
                android:textAllCaps="false"
                android:textSize="8pt"
                android:text="@string/title_sort" />


            <ImageButton
                android:id="@+id/sort_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/sorting_name_az"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="8pt"
            android:padding="12dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/title_name_az"/>

        <Button
            android:id="@+id/sorting_name_za"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="8pt"
            android:padding="12dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/title_name_za"/>

        <Button
            android:id="@+id/sorting_new"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="8pt"
            android:padding="12dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/title_newest"/>

        <Button
            android:id="@+id/sorting_old"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="8pt"
            android:padding="12dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/title_oldest"/>

        <Button
            android:id="@+id/sorting_most_expensive"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="8pt"
            android:padding="12dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/title_most_expensive"/>

        <Button
            android:id="@+id/sorting_ceapest"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="8pt"
            android:padding="12dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/title_cheapest"/>

    </LinearLayout>


</RelativeLayout>
