<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/transparent"
        tools:ignore="UnusedAttribute, RelativeOverlap, ContentDescription">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/ads_image"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:scaleType="centerCrop" />


            <TextView
                android:id="@+id/ads_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8pt"
                android:text="@string/app_name"
                android:lines="2"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center|end">

                <TextView
                    android:id="@id/ads_rates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="7.5pt"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:layout_marginStart="8dp"
                    android:text="@string/title_per_hour"
                    android:textColor="@color/grey"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/grey" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="end"
                android:background="@color/grey_transparent">

                <Button
                    android:id="@+id/ads_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_delete"
                    android:drawablePadding="8dp"
                    android:text="@string/title_delete"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="7.5pt"
                    android:background="@color/transparent"/>

                <Button
                    android:id="@+id/ads_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_edit"
                    android:drawablePadding="8dp"
                    android:text="@string/title_edit"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="7.5pt"
                    android:paddingStart="25dp"
                    android:paddingEnd="15dp"
                    android:background="@color/transparent"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>